# novus

./: AGENTS.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/sftp/: connection.rs  connection_pool.rs  directory_operations.rs  file_operations.rs  mod.rs
src/components/file-manager/: FileManager.tsx
src/components/file-manager/parts/: ConnectionStatus.tsx  CreateFolderDialog.tsx  FileBreadcrumbs.tsx  FileStatusBar.tsx  FileTable.tsx  FileTabs.tsx  FileToolbar.tsx  RenameDialog.tsx  UploadProgressPanel.tsx
src/components/notifications/: AppNotifications.tsx
src/components/session/: SessionBox.tsx  SessionCreate.tsx  SessionDialog.tsx  SessionHeader.tsx  SessionItem.tsx
src/components/session/parts/: DeleteSessionDialog.tsx
src/data/: files.ts  sessions.ts
src/models/: session.model.ts
src/services/: sftpDirectory.ts  sftpTransfer.ts
src/store/: session.store.ts
src/types/: file-manager.ts  reapop.d.ts  session.ts
